Review and colors

--- a/third.html
+++ b/third.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <header class="hlavicka">
+    <header class="hlavicka" id="hlavicka">
       <p class="poem">a džus pít --- holku mít --- mýmy blít --- jak vlk výt</p>
       <h1>hepy bídej ;)</h1>
       <div class="nav">
@@ -23,18 +23,19 @@
             >ur Spotify playlist</a
           >
         </div>
-        <div><a href="#poetika">ur poemz</a></div>
+        <div class="red"><a href="#poetika">ur poemz</a></div>
         <div>
           <a href="not-anket.html"
             >tady bude na tvoje pravý narozeniny mým :smirk:</a
           >
         </div>
+
+        <div><a href="#info">info stack 2.0</a></div>
+        <div class="blue-box"><a href="index.html">da první stránka</a></div>
+        <div><a href="second.html">le druhá stránka</a></div>
         <div>
           <a href="nichts">někdo hledá lásku já zoufalce pro pobavení</a>
         </div>
-        <div><a href="info">info stack 2.0</a></div>
-        <div><a href="index.html">da první stránka</a></div>
-        <div><a href="second.html">le druhá stránka</a></div>
       </div>
     </header>
     <section class="texty" id="texty">
@@ -51,7 +52,7 @@
       </p>
       <p>
         Inu, paní profesorku zmiňuji proto, že sis možná všimla (nebo všimneš)
-        těch všemožných červených výkřiků tady všude kolem. Možná Ti dokonce
+        těch všemožných červených výkřiků, které se tu občas cpou do očí. Možná Ti dokonce
         budou povědomé, možná jako by Ti z oka vypdaly. Jsou do jednoho vypsané
         ze zápisků, které mám z těch hodin a myslím, že třeba z poloviny jsi je
         psala Ty. Připomělo mi to, jak jsme ji někde potkaly, snad na chodbě? a
@@ -65,11 +66,16 @@
         <em>ee right, am i to take this personally, or like?</em>
       </p>
       <p class="poem">
-        had: hisssss<br> had feministka: herrrrrrr
+        had: hisssss<br />
+        had feministka: herrrrrrr
       </p>
       <div class="info" id="info">
         <h3>random info o spotyfájovi</h3>
         <p>Jenom teda na okraj.</p>
+        <p class="poem">
+          On nějak neměl potřebu se po tom Ježkovi vozit. – A kdo by taky měl,
+          když má bodliny?
+        </p>
         <p class="green">
           Začala jsem si v poslední době dělat playlisty na Spotify, ačkoliv mi
           to vždycky přišlo jako docela zbytečný opruz, a navíc je to takové
@@ -81,6 +87,7 @@
             >Spotify playlist.</a
           >
         </p>
+        <p class="poem">„Oni mě šikanujou!“ – „Tak vy jste už zvyklej, ne?“</p>
         <p>
           Je to v podstatě dvouhodinová hromada, na kterou už asi dva týdny
           házím věci, který mě rozesmějou, když začnou hrát, ale taky pár
@@ -108,64 +115,65 @@
       <div class="nav">
         <div><a href="#saska">na výslunní</a></div>
         <div><a href="prenk.html">prenk</a></div>
+        <div><a href="#hlavicka">go back up</a></div>
       </div>
       <div class="saska" id="saska">
         <h3>na výslunní</h3>
         <p>
-          přede dveřmi domu stojí<br>
-          hledí kamsi do prázdna<br>
-          v beznaději, ztuhlá křečí<br>
+          přede dveřmi domu stojí<br />
+          hledí kamsi do prázdna<br />
+          v beznaději, ztuhlá křečí<br />
           dveře drží pro vás dva
-      </p>
-      <p>
-          drahá saško, psíku tupý<br>
-          kde Tvá duše otálí?<br>
-          saško, tvoje paní trpí<br>
+        </p>
+        <p>
+          drahá saško, psíku tupý<br />
+          kde Tvá duše otálí?<br />
+          saško, tvoje paní trpí<br />
           proklíná tě potají
-      </p>
-      <p>
-          přede dveřmi domu stojí<br>
-          žena, zdá se, otálí<br>
-          tupí psík dál tupě stojí<br>
+        </p>
+        <p>
+          přede dveřmi domu stojí<br />
+          žena, zdá se, otálí<br />
+          tupí psík dál tupě stojí<br />
           v tuposti se ukájí
-      </p>
-      <p>
-          drahá saško, proč ji trápíš<br>
-          nevíš, že sil ubývá?<br>
-          nelze dveře bez ustání<br>
+        </p>
+        <p>
+          drahá saško, proč ji trápíš<br />
+          nevíš, že sil ubývá?<br />
+          nelze dveře bez ustání<br />
           těžké dlouho podpírat!
-      </p>
-      <p>
-          'Saško, jdeme!' zvolá dáma<br>
-          které sil už ubývá<br>
-          saška ale, téměř znáhla<br>
+        </p>
+        <p>
+          'Saško, jdeme!' zvolá dáma<br />
+          které sil už ubývá<br />
+          saška ale, téměř znáhla<br />
           beze slova povídá:
-      </p>
-      <p>
-          nač kam chodit? tu jsem doma<br>
-          baba jedna protivná<br>
-          přestane-li si mě všímat<br>
+        </p>
+        <p>
+          nač kam chodit? tu jsem doma<br />
+          baba jedna protivná<br />
+          přestane-li si mě všímat<br />
           zvládnu-li se nehýbat?
-      </p>
-      <p>
-          trpělivost starých lidí<br>
-          předčí tupost sašky, psa<br>
-          zendlouho saška vidí<br>
+        </p>
+        <p>
+          trpělivost starých lidí<br />
+          předčí tupost sašky, psa<br />
+          zendlouho saška vidí<br />
           že jí nic moc nezbývá
-      </p>
-      <p>
-          zvolna vstává, hýbe nohou<br>
-          dámě dech se zužuje<br>
-          dveře těžké drží, čeká<br>
+        </p>
+        <p>
+          zvolna vstává, hýbe nohou<br />
+          dámě dech se zužuje<br />
+          dveře těžké drží, čeká<br />
           psík se znáhla vnucuje
-      </p>
-      <p>
-          běží svěže, chvostem mává<br>
-          hopsá téměř zasněně<br>
-          kdežto paní trpce ráda<br>
+        </p>
+        <p>
+          běží svěže, chvostem mává<br />
+          hopsá téměř zasněně<br />
+          kdežto paní trpce ráda<br />
           myslí si: 'ty kreténe'
-      </p>
-  </div>
+        </p>
+      </div>
     </section>
   </body>
 </html>
