colors and tune up

--- a/third.html
+++ b/third.html
@@ -37,38 +37,43 @@
           <a href="nichts">někdo hledá lásku já zoufalce pro pobavení</a>
         </div>
       </div>
-    </header>
-    <section class="texty" id="texty">
       <p class="poem">Mára má holku, já mám depku</p>
-      <h2>milá saško</h2>
-      <p>
-        Milá Saško, chtěla jsem <em>flexit, že umím dělat webový stránky</em> a
-        ólsou jsem si tuhle vzpomněla, netuším proč, na tu paní na hudebku (ani
-        nevíš, do jakých hlubin webu Arcigu jsem se musela potopit, abych našla
-        její jméno, které jsem, myslím, nakonec stejně našla někde jinde), ale
-        kromě toho, že jsem chtěla <em>flexit, že</em> – už jsi to slyšela? ( ˘
-        ͜ʖ ˘) – <em>umím dělat webové stránky,</em> jsem Tě chtěla jednou zase
-        pobavit a potěšit, tak doufám, že stránka aspoň trochu splní svůj účel.
-      </p>
-      <p>
-        Inu, paní profesorku zmiňuji proto, že sis možná všimla (nebo všimneš)
-        těch všemožných červených výkřiků, které se tu občas cpou do očí. Možná Ti dokonce
-        budou povědomé, možná jako by Ti z oka vypdaly. Jsou do jednoho vypsané
-        ze zápisků, které mám z těch hodin a myslím, že třeba z poloviny jsi je
-        psala Ty. Připomělo mi to, jak jsme ji někde potkaly, snad na chodbě? a
-        ona řekla něco jako: „Vy jste ty holčičky, co se pořád smějou, že jo?“
-      </p>
-      <p>
-        Ólsou, mě teď jen tak napadá, že mi vždycky přišlo hrozně vtipný, jak
-        jsem se snažila Ti říkat Saško, aby se ujalo, že jsme Sašky obě, ale
-        všichni, kteří kdy na to oslovení přešli (což byla asi jenom Klára a
-        Betty), říkaly vždycky Saško jenom Tobě a já byla jako...
-        <em>ee right, am i to take this personally, or like?</em>
-      </p>
-      <p class="poem">
-        had: hisssss<br />
-        had feministka: herrrrrrr
-      </p>
+    </header>
+
+    <section class="texty" id="texty">
+      <div class="mila">
+        <h2>milá saško</h2>
+        <p>
+          Milá Saško, chtěla jsem
+          <em>flexit, že umím dělat webový stránky</em> a ólsou jsem si tuhle
+          vzpomněla, netuším proč, na tu paní na hudebku (ani nevíš, do jakých
+          hlubin webu Arcigu jsem se musela potopit, abych našla její jméno,
+          které jsem, myslím, nakonec stejně našla někde jinde), ale kromě toho,
+          že jsem chtěla <em>flexit, že</em> – už jsi to slyšela? ( ˘ ͜ʖ ˘) –
+          <em>umím dělat webové stránky,</em> jsem Tě chtěla jednou zase pobavit
+          a potěšit, tak doufám, že stránka aspoň trochu splní svůj účel.
+        </p>
+        <p>
+          Inu, paní profesorku zmiňuji proto, že sis možná všimla (nebo všimneš)
+          těch všemožných červených výkřiků, které se tu občas cpou do očí.
+          Možná Ti dokonce budou povědomé, možná jako by Ti z oka vypdaly. Jsou
+          do jednoho vypsané ze zápisků, které mám z těch hodin a myslím, že
+          třeba z poloviny jsi je psala Ty. Připomělo mi to, jak jsme ji někde
+          potkaly, snad na chodbě? a ona řekla něco jako: „Vy jste ty holčičky,
+          co se pořád smějou, že jo?“
+        </p>
+        <p>
+          Ólsou, mě teď jen tak napadá, že mi vždycky přišlo hrozně vtipný, jak
+          jsem se snažila Ti říkat Saško, aby se ujalo, že jsme Sašky obě, ale
+          všichni, kteří kdy na to oslovení přešli (což byla asi jenom Klára a
+          Betty), říkaly vždycky Saško jenom Tobě a já byla jako...
+          <em>ee right, am i to take this personally, or like?</em>
+        </p>
+        <p class="poem">
+          had: hisssss<br />
+          had feministka: herrrrrrr
+        </p>
+      </div>
       <div class="info" id="info">
         <h3>random info o spotyfájovi</h3>
         <p>Jenom teda na okraj.</p>
