--- a/third.html
+++ b/third.html
@@ -34,7 +34,7 @@
         <div class="blue-box"><a href="index.html">da první stránka</a></div>
         <div><a href="second.html">le druhá stránka</a></div>
         <div>
-          <a href="nichts">někdo hledá lásku já zoufalce pro pobavení</a>
+          <a href="nichts">„Někdo hledá lásku já zoufalce pro pobavení.“</a>
         </div>
       </div>
       <p class="poem">Mára má holku, já mám depku</p>
@@ -66,7 +66,7 @@
           Ólsou, mě teď jen tak napadá, že mi vždycky přišlo hrozně vtipný, jak
           jsem se snažila Ti říkat Saško, aby se ujalo, že jsme Sašky obě, ale
           všichni, kteří kdy na to oslovení přešli (což byla asi jenom Klára a
-          Betty), říkaly vždycky Saško jenom Tobě a já byla jako...
+          Betty), říkaly vždycky Saško jenom mně a já byla celou dobu jako...
           <em>ee right, am i to take this personally, or like?</em>
         </p>
         <p class="poem">
